--- a/proyecto/style.css
+++ b/proyecto/style.css
@@ -11,7 +11,7 @@
 }
 
 .card-body {
-  background-color: beige;
+  background-color: #ffe8d6;
   border: 2px bold black;
 
   display: flex;
@@ -20,11 +20,11 @@
 }
 
 .card-title {
-  color: blue;
+  color: #cb997e;
 }
 
 .card-text {
-  color: violet;
+  color: #6b705c;
   font-size: 20px;
   margin: 10px;
   padding-top: 10px;
@@ -36,11 +36,12 @@
   display: flex;
   flex-direction: row;
   justify-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  space;
 }
 
 .card-body2 {
   padding: 20px;
-  background-color: rgb(255, 240, 179);
+  background-color: #ffe8d6;
   border: 2px bold black;
 }
