--- a/proyecto/css/style.css
+++ b/proyecto/css/style.css
@@ -4,8 +4,22 @@
   box-sizing: border-box;
 }
 
-/*----------carrito-------------*/
+body {
+  background-image: url(../fondo.jpg);
 
+  font-family: "Dancing Script", cursive;
+  padding: 50px;
+}
+
+h2 {
+  font-size: 50px;
+  padding: 50px;
+  color: white;
+}
+
+.btn_carrito {
+  margin: 100px;
+}
 .card-body {
   background-color: #ffe8d6;
   border: 2px bold black;
@@ -16,11 +30,11 @@
 }
 
 .card-title {
-  color: #cb997e;
+  color: rgba(235, 25, 165, 0.809);
 }
 
 .card-text {
-  color: #6b705c;
+  color: black;
   font-size: 20px;
   margin: 10px;
   padding-top: 10px;
